# simple-haskell-exercises

./: LICENSE  README.md
conditions_if/calcTime-let-in/: README.md  calcTime-let-in.cabal
conditions_if/calcTime-let-in/src/: Main.hs
conditions_if/calcTime-where/: README.md  calcTime-where.cabal
conditions_if/calcTime-where/src/: Main.hs
conditions_if/check-name/: README.md  check-name.cabal
conditions_if/check-name/src/: Main.hs
conditions_if/gold/: gold.cabal
conditions_if/gold-case-of/: README.md  gold-case-of.cabal
conditions_if/gold-case-of/src/: Main.hs
conditions_if/gold/src/: Main.hs
cube-number/: README.md  cube-number.cabal
cube-number/src/: Main.hs
enumeration/: enumeration.cabal
enumeration/src/: Main.hs
factorial/: factorial.cabal
factorial/src/: Main.hs
fst-snd-from-tuple/: README.md  fst-snd-from-tuple.cabal
fst-snd-from-tuple/src/: Main.hs
gold-without-if/: README.md  gold-without-if.cabal
gold-without-if/src/: Main.hs
make-tuple/: README.md  make-tuple.cabal
make-tuple/src/: Main.hs
rename-adding-to-list/: README.md  rename-adding-to-list.cabal
rename-adding-to-list/src/: Main.hs
select-function/: ChangeLog.md  README.md  select-function.cabal  stack.yaml
select-function/src/: Main.hs
universal-type/: README.md  universal-type.cabal
universal-type/src/: Main.hs
